style bug fixed (gap property isnt supported on ios)

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -40,18 +40,11 @@
     color: #b8b8b8;
 }
 
-.header__item--on::after {
-    content: '';
-    position: absolute;
-    bottom: -3rem;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-    background: transparent;
-    border: 1px solid transparent;
-    transition: all 250ms ease;
+@supports not (gap: 1rem) {
+    .header__item,
+    .header__navigation {
+        margin-right: 1rem;
+    }
 }
 
 .header__icon {
@@ -79,7 +72,10 @@
 @media all and (max-width: 510px) {
     .header {
         background: white;
-        padding-bottom: 6rem;
+        padding-bottom: 4.5rem;
+        padding-left: 0;
+        padding-right: 0;
+        padding-top: 3rem;
     }
 
     .header__navigation {
@@ -94,11 +90,18 @@
     }
 
     .header__item::after {
+        content: '';
+        position: absolute;
+        bottom: -3rem;
+        left: 50%;
+        transform: translate(-50%, 0);
+        transition: all 250ms ease;
         content: attr(data-value);
         width: auto;
         height: auto;
         border: none;
         background: none;
+        bottom: -2.5rem;
         font-size: 1.2rem;
     }
 
@@ -120,16 +123,6 @@
 }
 
 @media all and (max-width: 414px) {
-    .header {
-        padding-bottom: 4.5rem;
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    .header__navigation {
-        justify-content: space-evenly;
-    }
-
     .header__item::after {
         bottom: -2.5rem;
     }
