--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -60,7 +60,7 @@ html {
 html,
 body {
     width: 100%;
-    height: 100%;
+    height: auto;
     font-size: 10px;
     background-color: var(--document-bg);
     transition: all 250ms ease;
